# MacroFund

./: .gitignore  all_files_dump.txt  pyproject.toml  readme.md  requirements.txt
configs/: base.yaml  dev.yaml  production.yaml  research.yaml
data/: README.md  __main__.py  cli.py
data/canonical/: write_audit.jsonl
data/configs/: calendars.yaml  lags.yaml  manifest_template.json  storage.yaml  universe.yaml  vendors.yaml
data/ingest/jobs/: backfill.py  update_cot.py  update_macro.py  update_policy.py  update_prices.py
data/ingest/providers/: bloomberg_excel.py  cftc_cot.py  ecb_sdmx.py  fred.py  ois_curve.py  polygon.py
data/normalize/: canonicalize_cot.py  canonicalize_macro.py  canonicalize_policy.py  canonicalize_prices.py  renaming.py  validation.py
data/publish/: build_cot_zscores.py  build_macro_asof.py  build_policy_features.py  build_returns.py  dependency_tracker.py
data/schemas/: cot.schema.json  cot_z.schema.json  macro_asof.schema.json  macro_releases.schema.json  market_prices.schema.json  policy_features.schema.json  returns.schema.json
data/store/: dataset.py  locks.py  manifest.py  metadata.py  upsert.py
src/athena_regime/: __init__.py  cli.py
src/athena_regime/allocation/: engine.py
src/athena_regime/analytics/: performance.py  visualization.py
src/athena_regime/backtest/: engine.py
src/athena_regime/config/: __init__.py  loader.py  schema.py  utils.py
tests/: conftest.py  test_allocation_engine.py  test_backtest_performance.py  test_datalake.py  test_engineering.py  test_inference_engine.py  test_ingestion_pipeline_e2e.py
(+14 files in other folders)
